fix: remove scrollbar where content isn't scrollable

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -66,9 +66,12 @@ a:hover {
     width: 100%;
     height: calc(100% - 64px);
     padding: 0 8px;
-    overflow-y: scroll;
 
     background-color: black;
+
+    &--scrollable {
+        overflow-y: scroll;
+    }
 }
 
 .page-container__content__table {
